# faro

./: .gitignore  HANDOFF.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/superpowers/: progress-widget-refinement-phase1.2.md  progress-windows-parity.md  progress-windows-reporter.md
docs/superpowers/plans/: 2026-06-27-faro-mvp-macos.md  2026-06-28-faro-widget-redesign-phase1.md  2026-06-28-faro-widget-refinement-phase1.2.md  2026-06-29-faro-windows-parity.md  2026-06-30-faro-card-redesign.md  2026-06-30-faro-distribution.md  2026-06-30-faro-windows-reporter.md
docs/superpowers/specs/: 2026-06-28-faro-widget-redesign-design.md  2026-06-28-faro-widget-refinement-phase1.2-design.md  2026-06-29-faro-windows-parity-design.md  2026-06-30-faro-card-redesign-design.md  (+2 more)
hooks/: agent-monitor-report.cmd  agent-monitor-report.sh  install-windows.ps1  install-windows.tests.ps1
src/: App.css  App.tsx  TrafficLight.tsx  attention.test.ts  attention.ts  settings.test.ts  settings.ts  snapshot.test.ts  snapshot.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: classify.rs  git.rs  hooks_install.rs  http.rs  lib.rs  main.rs  model.rs  source.rs  store.rs  transcript.rs  tray.rs  window_geom.rs
src/components/: CollapsedPill.tsx  DrawerPanel.tsx  FirstRunConsent.tsx  SessionCard.tsx  SessionDetail.tsx  SessionRow.tsx  StatusChip.tsx  TrafficLight.tsx
src/hooks/: useAttention.ts  useAudioCues.ts  useWindowFit.test.ts  useWindowFit.ts
